--- a/marvel-react/src/App.css
+++ b/marvel-react/src/App.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
 * {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Sans Caption', sans-serif;
     text-decoration: none;
     list-style-type: none;
 }
@@ -18,7 +19,7 @@
 }
 
 .card-body {
-    width: 600px;
+    width: 1200px;
     margin: 10px !important;
     font-family: 'Montserrat', sans-serif;
 }
@@ -46,7 +47,7 @@
     display: flex;
     width: 1366px;
     
-    background: gray;
+    background: #fff;
     
   }
   .main-nav li:first-child {
@@ -54,13 +55,48 @@
   }
   .main-nav span, img {
     
-    border-radius: 5px;
     font-size: 14px;
     color: #555555;
     display: inline-block;
-    margin: 19px 24px 21px 18px;
+    
     text-decoration: none;
+
   }
   .main-nav .logo {
     width: 96px;
+    margin: 19px 24px 21px 18px;
   }
+
+  .name-initials {
+    background: #F5F5F5 0% 0% no-repeat padding-box;
+    border-radius: 4px;
+    opacity: 1;
+    width: 25px;
+    height: auto;
+    text-align: center;
+    font-family: 'PT Sans Caption', sans-serif;
+    font-weight: 700;
+    margin: 19px 24px 21px 18px;
+  }
+
+  .name-initials:hover {
+    background: #555555 0% 0% no-repeat padding-box;
+    color: #F5F5F5;
+
+  }
+
+  .student-name {
+      margin-top: 16px;
+      margin-bottom: 13px;
+      width: 267px;
+      text-align: end;
+
+  }
+
+  .meta-name {
+      font-weight: 700;
+      font-family: 'PT Sans Caption', sans-serif;
+      padding-right: 8px;
+  }
+
+  
